@@ -14,7 +14,6 @@ import no.vegvesen.ixn.federation.ssl.TestSSLProperties;
 import no.vegvesen.ixn.ssl.KeystoreDetails;
 import no.vegvesen.ixn.ssl.KeystoreType;
 import no.vegvesen.ixn.ssl.SSLContextFactory;
-import org.apache.qpid.proton.amqp.transport.End;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -362,7 +361,7 @@ public class ServiceProviderRouterIT extends QpidDockerBaseIT {
 						"pub-1",
 						"NO",
 						"1.0",
-						Collections.singleton("0122"),
+						List.of("0122"),
 						"publicationType"
 				),
 				new Metadata(RedirectStatus.OPTIONAL)
@@ -469,7 +468,7 @@ public class ServiceProviderRouterIT extends QpidDockerBaseIT {
 	public void serviceProviderWithCapabilitiesShouldNotHaveQueueButExistInServiceProvidersGroup() {
 		ServiceProvider onlyCaps = new ServiceProvider("onlyCaps");
 		Capabilities capabilities = new Capabilities(Capabilities.CapabilitiesStatus.UNKNOWN,
-				Collections.singleton(new CapabilitySplit(new DatexApplication("NO-123", "NO-pub","NO", "1.0", Collections.emptySet(), "SituationPublication"), new Metadata(RedirectStatus.OPTIONAL))));
+				Collections.singleton(new CapabilitySplit(new DatexApplication("NO-123", "NO-pub","NO", "1.0", List.of(), "SituationPublication"), new Metadata(RedirectStatus.OPTIONAL))));
 
 		when(serviceProviderRepository.save(any())).thenReturn(onlyCaps);
 		onlyCaps.setCapabilities(capabilities);
@@ -485,7 +484,7 @@ public class ServiceProviderRouterIT extends QpidDockerBaseIT {
 	public void serviceProviderShouldBeRemovedWhenCapabilitiesAreRemoved() {
 		ServiceProvider serviceProvider = new ServiceProvider("serviceProvider");
 		Capabilities capabilities = new Capabilities(Capabilities.CapabilitiesStatus.UNKNOWN,
-				Collections.singleton(new CapabilitySplit(new DatexApplication("NO-123", "NO-pub","NO", "1.0", Collections.emptySet(), "SituationPublication"), new Metadata(RedirectStatus.OPTIONAL))));
+				Collections.singleton(new CapabilitySplit(new DatexApplication("NO-123", "NO-pub","NO", "1.0", List.of(), "SituationPublication"), new Metadata(RedirectStatus.OPTIONAL))));
 		serviceProvider.setCapabilities(capabilities);
 
 		when(serviceProviderRepository.save(any())).thenReturn(serviceProvider);
@@ -530,7 +529,7 @@ public class ServiceProviderRouterIT extends QpidDockerBaseIT {
 	public void serviceProviderShouldBeRemovedFromGroupWhenTheyHaveNoCapabilitiesOrSubscriptions() {
 		ServiceProvider serviceProvider = new ServiceProvider("serviceprovider-should-be-removed");
 		Capabilities capabilities = new Capabilities(Capabilities.CapabilitiesStatus.UNKNOWN,
-				Collections.singleton(new CapabilitySplit(new DatexApplication("NO-123", "NO-pub","NO", "1.0", Collections.emptySet(), "SituationPublication"), new Metadata(RedirectStatus.OPTIONAL))));
+				Collections.singleton(new CapabilitySplit(new DatexApplication("NO-123", "NO-pub","NO", "1.0", List.of(), "SituationPublication"), new Metadata(RedirectStatus.OPTIONAL))));
 		serviceProvider.setCapabilities(capabilities);
 
 		when(serviceProviderRepository.save(any())).thenReturn(serviceProvider);
@@ -583,8 +582,8 @@ public class ServiceProviderRouterIT extends QpidDockerBaseIT {
 						"pub-1",
 						"NO",
 						"1.0",
-						new HashSet<>(Arrays.asList("1234")),
-						new HashSet<>(Arrays.asList(6))
+						List.of("1234"),
+						List.of(6)
 				),
 				metadata
 		);
@@ -623,8 +622,8 @@ public class ServiceProviderRouterIT extends QpidDockerBaseIT {
 						"pub-1",
 						"NO",
 						"1.0",
-						new HashSet<>(Arrays.asList("1234")),
-						new HashSet<>(Arrays.asList(6))
+						List.of("1234"),
+						List.of(6)
 				),
 				metadata1
 		);
@@ -640,8 +639,8 @@ public class ServiceProviderRouterIT extends QpidDockerBaseIT {
 						"pub-1",
 						"NO",
 						"1.0",
-						new HashSet<>(Arrays.asList("1234")),
-						new HashSet<>(Arrays.asList(5))
+						List.of("1234"),
+						List.of(5)
 				),
 				metadata2
 		);
@@ -679,8 +678,8 @@ public class ServiceProviderRouterIT extends QpidDockerBaseIT {
 						"pub-1",
 						"NO",
 						"1.0",
-						new HashSet<>(Arrays.asList("1234")),
-						new HashSet<>(Arrays.asList(6))
+						List.of("1234"),
+						List.of(6)
 				),
 				metadata
 		);
@@ -688,7 +687,7 @@ public class ServiceProviderRouterIT extends QpidDockerBaseIT {
 
 		LocalDelivery delivery = new LocalDelivery("originatingCountry = 'NO'", LocalDeliveryStatus.CREATED);
 		delivery.setId(1);
-		serviceProvider.addDeliveries(new HashSet<>(Arrays.asList(delivery)));
+		serviceProvider.addDeliveries(Set.of(delivery));
 		delivery.setExchangeName(exchangeName);
 
 		OutgoingMatch match = new OutgoingMatch(delivery, denmCapability, serviceProviderName);
@@ -722,8 +721,8 @@ public class ServiceProviderRouterIT extends QpidDockerBaseIT {
 						"pub-1",
 						"NO",
 						"1.0",
-						new HashSet<>(Arrays.asList("1234")),
-						new HashSet<>(Arrays.asList(6))
+						List.of("1234"),
+						List.of(6)
 				),
 				metadata
 		);
@@ -767,8 +766,8 @@ public class ServiceProviderRouterIT extends QpidDockerBaseIT {
 						"pub-1",
 						"NO",
 						"1.0",
-						new HashSet<>(Arrays.asList("1234")),
-						new HashSet<>(Arrays.asList(6))
+						List.of("1234"),
+						List.of(6)
 				),
 				metadata1
 		);
@@ -784,8 +783,8 @@ public class ServiceProviderRouterIT extends QpidDockerBaseIT {
 						"pub-1",
 						"NO",
 						"1.0",
-						new HashSet<>(Arrays.asList("1233")),
-						new HashSet<>(Arrays.asList(6))
+						List.of("1233"),
+						List.of(6)
 				),
 				metadata2
 		);
@@ -858,8 +857,8 @@ public class ServiceProviderRouterIT extends QpidDockerBaseIT {
 						"pub-1",
 						"NO",
 						"1.0",
-						new HashSet<>(Arrays.asList("1234")),
-						new HashSet<>(Arrays.asList(6))
+						List.of("1234"),
+						List.of(6)
 				),
 				metadata
 		);
